@@ -7,7 +7,7 @@ from zope.publisher.browser import BrowserView
 from Acquisition import aq_inner
 from Products.CMFCore.utils import getToolByName
 from Products.CMFPlone.utils import safe_unicode
-from plone.app.content.browser.tableview import Table, TableKSSView
+from plone.app.content.browser.tableview import Table, TableBrowserView
 
 
 class FullReviewListView(BrowserView):
@@ -149,5 +149,5 @@ class ReviewListTable(object):
         return button
 
 
-class ReviewListKSSView(TableKSSView):
+class ReviewListBrowserView(TableBrowserView):
     table = ReviewListTable
