@@ -4,6 +4,9 @@ Changelog
 2.1.0 (unreleased)
 -------------------
 
+- Remove KSS dependency from AJAX table views.
+  [cah190]
+
 - In table.pt use sequence_length to get batch size.
   [cah190]
 
